--- a/css/styles.css
+++ b/css/styles.css
@@ -11579,6 +11579,7 @@ body {
           background-clip: text;
 }
 .masthead h2, .masthead .h2 {
+  font-family: monospace;
   max-width: 20rem;
   font-size: 1rem;
 }
