--- a/css/styles.css
+++ b/css/styles.css
@@ -11579,7 +11579,8 @@ body {
           background-clip: text;
 }
 .masthead h2, .masthead .h2 {
-  font-family: monospace;
+  font-family: "Varela Round", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  text-transform: uppercase;
   max-width: 20rem;
   font-size: 1rem;
 }
